# hatch-nodejs-version

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: check-release.yml  full-release.yml  prep-release.yml  tests.yml
hatch_nodejs_version/: __init__.py  _version.py  hooks.py  metadata_source.py  version_source.py
tests/: __init__.py  conftest.py  test_metadata_config.py  test_version_config.py
