[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-nodejs-version"
version = "0.2.1"
description = "Hatch plugin for versioning from a package.json file"
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
dependencies = [
    "hatchling>=0.21.0"
]
requires-python = ">= 3.7"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]

[project.entry-points.hatch]
nodejs = "hatch_nodejs_version.hooks"

[tool.hatch.version]
path = "hatch_nodejs_version/_version.py"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = "extern"

[tool.isort]
profile = "black"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
]
